# onedrive-organizer

./: .pre-commit-config.yaml  README.md  ROADMAP.md  config.yaml  pyproject.toml  requirements.txt
.github/workflows/: python-app.yml
organizer/: __init__.py
organizer/organizer/: auth.py
organizer/organizer/organizer/: cli.py  scanner.py
organizer/organizer/organizer/organizer/: deduplicator.py  ocr.py
organizer/organizer/organizer/organizer/organizer/: renamer.py
organizer/organizer/organizer/organizer/organizer/organizer/: archiver.py
organizer/organizer/organizer/organizer/organizer/organizer/organizer/: cli.py
organizer/organizer/organizer/organizer/organizer/organizer/organizer/tests/: test_cli.py
organizer/organizer/organizer/organizer/organizer/organizer/organizer/tests/.github/workflows/: python-app.yml
organizer/organizer/organizer/organizer/tests/: test_cli.py
